crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_groovy_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.groovy\", &source)"
---
- name: Greeter
  kind: Interface
  start_line: 4
  end_line: 4
  signature: "interface Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: greet
  kind: Method
  start_line: 5
  end_line: 5
  signature: String greet(String name)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: Loggable
  kind: Trait
  start_line: 8
  end_line: 8
  signature: "trait Loggable {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: log
  kind: Method
  start_line: 9
  end_line: 9
  signature: "void log(String message) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SimpleGreeter
  kind: Class
  start_line: 14
  end_line: 14
  signature: "class SimpleGreeter implements Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: greet
  kind: Method
  start_line: 21
  end_line: 21
  signature: "String greet(String name) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: formatName
  kind: Method
  start_line: 26
  end_line: 26
  signature: "private String formatName(String name) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: FormalGreeter
  kind: Class
  start_line: 31
  end_line: 31
  signature: "class FormalGreeter extends SimpleGreeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: Priority
  kind: Enum
  start_line: 37
  end_line: 37
  signature: "enum Priority {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: main
  kind: Function
  start_line: 41
  end_line: 41
  signature: "def main(String[] args) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Public
  type_info: ~
