crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_hcl_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.tf\", &source)"
---
- name: region
  kind: Class
  start_line: 1
  end_line: 5
  signature: "variable \"region\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: instance_type
  kind: Class
  start_line: 7
  end_line: 11
  signature: "variable \"instance_type\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: aws_ami
  kind: Class
  start_line: 13
  end_line: 21
  signature: "data \"aws_ami\" \"ubuntu\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: ubuntu
  kind: Class
  start_line: 13
  end_line: 21
  signature: "data \"aws_ami\" \"ubuntu\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: aws_instance
  kind: Class
  start_line: 23
  end_line: 30
  signature: "resource \"aws_instance\" \"web\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: web
  kind: Class
  start_line: 23
  end_line: 30
  signature: "resource \"aws_instance\" \"web\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: aws_security_group
  kind: Class
  start_line: 32
  end_line: 42
  signature: "resource \"aws_security_group\" \"web_sg\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: web_sg
  kind: Class
  start_line: 32
  end_line: 42
  signature: "resource \"aws_security_group\" \"web_sg\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: vpc
  kind: Class
  start_line: 44
  end_line: 50
  signature: "module \"vpc\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: instance_ip
  kind: Class
  start_line: 52
  end_line: 55
  signature: "output \"instance_ip\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: vpc_id
  kind: Class
  start_line: 57
  end_line: 60
  signature: "output \"vpc_id\" {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
