crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_java_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 6381
expression: "parsed_references(\"Simple.java\", &source)"
---
- name: java.util.List
  kind: Import
  start_line: 1
  context: import java.util.List;
  receiver: ~
- name: java.util.ArrayList
  kind: Import
  start_line: 2
  context: import java.util.ArrayList;
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 5
  context: String greet(String name);
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 5
  context: (String name)
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 6
  context: String farewell(String name);
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 6
  context: (String name)
  receiver: ~
- name: Greeter
  kind: Implements
  start_line: 9
  context: "public class SimpleGreeter implements Greeter {"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 10
  context: private String prefix;
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 12
  context: (String prefix)
  receiver: ~
- name: prefix
  kind: ReadAccess
  start_line: 13
  context: this.prefix = prefix
  receiver: this
- name: Override
  kind: Call
  start_line: 16
  context: "@Override"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 16
  context: "@Override"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 17
  context: (String name)
  receiver: ~
- name: Override
  kind: Call
  start_line: 21
  context: "@Override"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 21
  context: "@Override"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 22
  context: (String name)
  receiver: ~
- name: SimpleGreeter
  kind: TypeRef
  start_line: 27
  context: "SimpleGreeter greeter = new SimpleGreeter(\">>>\");"
  receiver: ~
- name: String
  kind: TypeRef
  start_line: 28
  context: "String result = greeter.greet(\"world\");"
  receiver: ~
- name: greet
  kind: Call
  start_line: 28
  context: "result = greeter.greet(\"world\")"
  receiver: greeter
- name: out
  kind: ReadAccess
  start_line: 29
  context: System.out.println(result)
  receiver: System
- name: println
  kind: Call
  start_line: 29
  context: System.out.println(result);
  receiver: System.out
