crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_java_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 4261
expression: "parsed_symbols(\"Simple.java\", &source)"
---
- name: Greeter
  kind: Interface
  start_line: 4
  end_line: 7
  signature: "public interface Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
- name: greet
  kind: Method
  start_line: 5
  end_line: 5
  signature: String greet(String name);
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: Greeter
- name: farewell
  kind: Method
  start_line: 6
  end_line: 6
  signature: String farewell(String name);
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: Greeter
- name: SimpleGreeter
  kind: Class
  start_line: 9
  end_line: 31
  signature: "public class SimpleGreeter implements Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: ~
- name: prefix
  kind: Property
  start_line: 10
  end_line: 10
  signature: private String prefix;
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: SimpleGreeter
- name: SimpleGreeter
  kind: Method
  start_line: 12
  end_line: 14
  signature: "public SimpleGreeter(String prefix) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
  parent_name: SimpleGreeter
- name: greet
  kind: Method
  start_line: 16
  end_line: 19
  signature: "@Override"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: SimpleGreeter
- name: farewell
  kind: Method
  start_line: 21
  end_line: 24
  signature: "@Override"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: SimpleGreeter
- name: main
  kind: Method
  start_line: 26
  end_line: 30
  signature: "public static void main(String[] args) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Public
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: void
  parent_name: SimpleGreeter
