crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_js_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 8428
expression: "parsed_references(\"simple.js\", &source)"
---
- name: fs
  kind: Import
  start_line: 1
  context: "fs = require('fs')"
  receiver: ~
- name: fs
  kind: PackageBinding
  start_line: 1
  context: fs
  receiver: ~
- name: require
  kind: Call
  start_line: 1
  context: "fs = require('fs')"
  receiver: ~
- name: EventEmitter
  kind: PackageBinding
  start_line: 3
  context: events
  receiver: ~
- name: events
  kind: Import
  start_line: 3
  context: "import { EventEmitter } from 'events';"
  receiver: ~
- name: name
  kind: ReadAccess
  start_line: 13
  context: this.name = name
  receiver: this
- name: name
  kind: ReadAccess
  start_line: 17
  context: "this.name + ' makes a noise.'"
  receiver: this
- name: name
  kind: ReadAccess
  start_line: 23
  context: "this.name + ' barks.'"
  receiver: this
- name: Dog
  kind: Call
  start_line: 27
  context: "dog = new Dog('Rex')"
  receiver: ~
- name: greet
  kind: Call
  start_line: 28
  context: "greet('world');"
  receiver: ~
- name: speak
  kind: Call
  start_line: 29
  context: dog.speak();
  receiver: dog
- name: speak
  kind: ReadAccess
  start_line: 29
  context: dog.speak()
  receiver: dog
