crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_julia_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 2550
expression: "parsed_references(\"simple.jl\", &source)"
---
- name: println
  kind: Call
  start_line: 22
  context: println(item)
- name: println
  kind: Call
  start_line: 28
  context: "println(\"Calling: \", $(string(expr)))"
- name: string
  kind: Call
  start_line: 28
  context: "println(\"Calling: \", $(string(expr)))"
- name: esc
  kind: Call
  start_line: 29
  context: $(esc(expr))
- name: Animal
  kind: Call
  start_line: 34
  context: "animal = Animal(\"Dog\", \"Woof\")"
- name: greet
  kind: Call
  start_line: 35
  context: greeting = greet(animal.name)
- name: println
  kind: Call
  start_line: 36
  context: println(greeting)
- name: process
  kind: Call
  start_line: 37
  context: "@log_call process([1, 2, 3])"
