crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_julia_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 6486
expression: "parsed_symbols(\"simple.jl\", &source)"
---
- name: Greetings
  kind: Module
  start_line: 1
  end_line: 42
  signature: module Greetings
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: LivingThing
  kind: Interface
  start_line: 5
  end_line: 5
  signature: abstract type LivingThing end
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: Animal
  kind: Class
  start_line: 7
  end_line: 10
  signature: "struct Animal <: LivingThing"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: Counter
  kind: Class
  start_line: 12
  end_line: 14
  signature: mutable struct Counter
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: greet
  kind: Function
  start_line: 16
  end_line: 18
  signature: "function greet(name::String)::String"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: process
  kind: Function
  start_line: 20
  end_line: 24
  signature: "function process(items::Vector{Int})"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: log_call
  kind: Function
  start_line: 26
  end_line: 31
  signature: macro log_call(expr)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: main
  kind: Function
  start_line: 33
  end_line: 38
  signature: function main()
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
- name: double
  kind: Function
  start_line: 40
  end_line: 40
  signature: double(x) = x * 2
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: Greetings
