crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_kotlin_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"Simple.kt\", &source)"
---
- name: Greeter
  kind: Class
  start_line: 5
  end_line: 7
  signature: "interface Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: greet
  kind: Method
  start_line: 6
  end_line: 6
  signature: "fun greet(name: String): String"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: ~
  scope_chain: Greeter
- name: SimpleGreeter
  kind: Class
  start_line: 9
  end_line: 17
  signature: "class SimpleGreeter : Greeter {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: greet
  kind: Method
  start_line: 10
  end_line: 12
  signature: "override fun greet(name: String): String {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info:
    declared_type: ~
    parameter_types: []
    return_type: String
  parent_name: ~
  scope_chain: SimpleGreeter
- name: logGreeting
  kind: Method
  start_line: 14
  end_line: 16
  signature: "private fun logGreeting(message: String) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: SimpleGreeter
- name: AppConfig
  kind: Module
  start_line: 19
  end_line: 21
  signature: "object AppConfig {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: defaultName
  kind: Property
  start_line: 20
  end_line: 20
  signature: "val defaultName = \"World\""
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: AppConfig
- name: main
  kind: Function
  start_line: 23
  end_line: 28
  signature: "fun main() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: greeter
  kind: Property
  start_line: 24
  end_line: 24
  signature: val greeter = SimpleGreeter()
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: result
  kind: Property
  start_line: 25
  end_line: 25
  signature: val result = greeter.greet(AppConfig.defaultName)
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
  parent_name: ~
  scope_chain: ~
